autenticação via e-mail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   </h1>
 </div>
 <div style="text-align:left">
-  <app-cadastro-pessoa></app-cadastro-pessoa>
+  <!-- <app-cadastro-pessoa></app-cadastro-pessoa> -->
+  <router-outlet></router-outlet>
 </div>
 
